# attest

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.ja.md  README.md  SECURITY.md
.claude/agents/: general-purpose.md  implementation.md  quick-fix.md  refactoring.md  research.md
.claude/commands/: continue-session.md  implement-with-agent.md  recap.md  review-session.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml
cmake/: attestConfig.cmake.in  human68k.cmake  mcc.cmake  mcc_overrides.cmake
docs/: api.ja.md  api.md  attest_p0_spec.md  attest_p1.1_spec.md  attest_p1_plus_spec.md  attest_p1_spec.md  capture_refactor_status.md  guide.ja.md  guide.md  internals.ja.md  internals.md  parallel_execution_design.md  roadmap.ja.md  roadmap.md  windows_support.md
include/attest/: attest.h
scripts/: build-human68k.sh  build-mcc.sh  update_homebrew.sh
src/: attest.c  attest_assert.c  attest_capture.c  attest_cli.c  attest_fixture.c  attest_main.c  attest_parallel.c
src/internal/: attest_context.h  attest_internal.h  attest_registry.c  attest_timeout.h  attest_timeout_posix.c  attest_timeout_win32.c
tests/: selftest_c99.c  selftest_main.c  test_thread_detection.c  timeout_test.c
tools/: build-human68k.sh
